feat: stabilize architectural building